Add unarchiver tests